--- a/css/layout.css
+++ b/css/layout.css
@@ -61,27 +61,23 @@ nav ul {
 
 }
 
-img {
+#headshot {
 	height: 250px;
 	border: 1px solid black;
-	
-}
-
-.img-container {
-	border-radius: 20px;
-	display: block;
-    width: 40px;
-	height: 40px;
-	overflow: hidden;
 }
 
 #profiles {
 	list-style: none;
 	font-size: 20px;
+	margin: 0;
 }
 
 #profiles li {
-	margin: 10px;
+	margin: 30px;
+}
+
+#profiles li:first-child {
+	margin-top: 0;
 }
 
 #profiles a {
@@ -100,7 +96,9 @@ img {
 	left: -10px;
   }
 
-
+#aboutMe h4 {
+	padding: 1em;
+}
 
  #overlay {
 	display: flex;
@@ -142,7 +140,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 40vw;
+	width: 50vw;
 	height: 80vh;
 	position: relative;
 	top: 18vh;
@@ -156,17 +154,27 @@ a {
 	height: 80vh;
 	position: relative;
 	top: 18vh;
-
 }
 
-a.svg:after {
-	content: ""; 
-	position: absolute; 
-	top: 0; 
-	right: 0; 
-	bottom: 0; 
-	left: 0;
-  }
+#bio {
+	padding: 0 4em;
+}
+
+.arrow-down {
+	width: 0; 
+	height: 0; 
+	border-left: 15vh solid transparent;
+	border-right: 15vh solid transparent;
+	border-top: 15vh solid #777;
+	position: absolute;
+	left: 50%;
+	margin-left: -15vh;
+}
+
+#projects {
+	border-top: 2vh solid #777;
+}
+
 
 h2, h3 {
 	padding: 0;
@@ -174,15 +182,21 @@ h2, h3 {
 	color: white;
 }
 
+h6 {
+	text-align: center;
+	font-size: 1.5em;
+}
+
 
 
 h4 {
 	font-size: 2em;
 	text-align: center;
+	margin: 0;
 }
 
 #projects {
-	height: 100vh;
+	height: 125vh;
 	
 }
 
@@ -199,17 +213,51 @@ h4 {
 	align-items: center;
 	position: relative;
 	top: 25vh;
-	
+}
+
+#project-grid article {
+	width: 30vw;
+	height: 100%;
+	overflow: hidden;
 }
 
 footer {
 	background: #333;
 	color: white;
-	height: 10em;
 	font-family: "Nanum Gothic";
-	display: flex;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 	align-items: center;
-	padding: 2em;
+	
+}
+
+#project-grid img {
+	height: 250px;
+	width: 100%;
+	position:relative; 
+	left:50%;
+ 	transform:translateX(-50%);
+}
+
+.skills {
+	font-weight: 700;
+}
+
+#footer-second-column {
+	padding: 4em 6em;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+#footer-second-column img {
+	width: 3em;
+}
+
+#footer-first-column {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding-left: 3em;
 }
 
