--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ nav ul {
 
 nav ul li {
 	padding: .75em 2em;
-	margin: 1em;
+	margin: .5em 1em;
 	border-radius: 10px;
 	background: #A61919;
 	color: white;
@@ -224,6 +224,10 @@ h4 {
 	min-width: var(--min-width);
 	grid-column-gap: 40px;
 	margin: 0 40px;
+}
+
+#project-grid a {
+	color: black;
 }
 
 #project-grid article {
