--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ body {
 	width: 100vw;
 }
 
+body.modal-open {
+	/* hide scrolling when modal open */
+	overflow: hidden;
+  }
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -54,6 +59,84 @@ nav ul li {
 	overflow: hidden;
 	min-width: var(--min-width);
 }
+
+
+#slider {
+	height: 80vh;
+}
+
+
+#slider ::selection {
+	color: inherit;
+	background: transparent;
+  }
+  
+  #slider-frame {
+	border: 1px solid #fff;
+	border-radius: 3px;
+	box-shadow: 0 0 5px #333;
+	position: relative;
+  }
+  
+  #slider-prev,
+  #slider-next {
+	width: 50%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: flex;
+	padding: 1em;
+	color: #fff;
+	font-weight: bold;
+	text-shadow: 0 0 2px #000;
+	transition: 0.5s;
+	cursor: pointer;
+  }
+  
+  #slider-prev:hover,
+  #slider-next:hover {
+	background: rgba(255,255,255,0.3);
+  }
+  
+  #slider-prev {
+	left: 0;
+	flex-direction: row;
+	align-items: center;
+  }
+  
+  #slider-next {
+	right: 0;
+	flex-direction: row-reverse;
+	align-items: center;
+  }
+  
+  #slider-frame {
+	background: #ccc;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+  
+	height: 15em;
+  }
+  
+  #slider-frame [data-src] {
+	display: none;
+  }
+  
+  #slider-caption {
+	margin-top: 5px;
+	border-radius: 3px;
+	border: 1px solid #ccc;
+	padding: 0.2em 0.5em;
+	font-size: 0.8em;
+	text-align: center;
+	transition: 0.5s;
+  }
+  
+  #slider-caption.flash {
+	transition: 0s;
+	background: #ccc;
+  }
 
 #headshot {
 	height: 100%;
@@ -127,13 +210,10 @@ a {
 	grid-template-columns: repeat(2, 1fr);
 	justify-items: center;
 	align-items: start;
-
-
 }
 
 #profiles{
 	padding-left: 2em;
-	
 }
 
 #info, #contact {
@@ -172,7 +252,6 @@ a {
 	border-top: 10px solid #777;
 	min-width: var(--min-width);
 }
-
 
 h2, h3 {
 	padding: 0;
@@ -278,6 +357,88 @@ footer {
 .svg {
 	filter: invert(1);
 }
+
+
+
+#backdrop {
+	position: fixed;
+	top: 10vh;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0,0,0,0.7);
+  
+	display: none;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .modal-open #backdrop {
+	display: flex;
+  }
+  
+  #modal {
+	width: 80vw;
+	height: 65vh;
+	background: #fff;
+	padding: 1em;
+	border-radius: 5px;
+	box-shadow: 0 0 5px 5px #333;
+  }
+  
+  #modal h4 {
+	float: left;
+  }
+  
+  #modal button {
+	float: right;
+  
+	background: #eee;
+	padding: 5px 10px;
+	border: 0;
+	border-radius: 3px;
+  
+	cursor: pointer;
+  }
+  
+  #modal button:hover {
+	color: #fff;
+	background: #999;
+  }
+  
+  #modal #modal-content {
+	clear: both;
+	padding-top: 1em;
+  }
+
+  @media screen and (max-width: 750px) {
+
+	nav {
+	  display: flex;
+	  flex-flow: column;
+	}
+	nav a {
+	  display: none;
+	}
+	nav::before {
+	  content: 'SHOW MENU';
+	  color: #fff;
+	  background: #000;
+	  font-weight: bold;
+	  padding: 0.5em 2em;
+	}
+	nav.open::before {
+	  content: 'HIDE MENU';
+	}
+	nav.open a {
+	  display: block;
+	}
+  
+	nav ::selection {
+	  color: inherit;
+	  background: transparent;
+	}
+  }
 
  
 
