--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ header {
 	top: 0;
 	width: 100%;
 	z-index: 2;
-	min-width: 1000px;
+
 }
 
 h1 {
@@ -31,6 +31,13 @@ h1 {
 	font-size: 3.5em;
 	margin: 0;
 	color: #fff;
+}
+
+h2, h3 {
+	padding: 0;
+	margin: 0;
+	color: white;
+	text-align: center;
 }
 
 nav ul {
@@ -60,9 +67,24 @@ nav ul li {
 	min-width: var(--min-width);
 }
 
+#projectSlider {
+	height: 100vh;
+}
+
+#sliderHeading {
+	font-size: 2em;
+	color: black;
+	padding: 1em;
+
+}
+
 
 #slider {
 	height: 80vh;
+	width: 75vw;
+	margin: 0 auto;
+	position: relative;
+	top: 15vh;
 }
 
 
@@ -80,7 +102,7 @@ nav ul li {
   
   #slider-prev,
   #slider-next {
-	width: 50%;
+	width: 5%;
 	height: 100%;
 	position: absolute;
 	top: 0;
@@ -115,8 +137,7 @@ nav ul li {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100%;
-  
-	height: 15em;
+  height: 24em;
   }
   
   #slider-frame [data-src] {
@@ -131,6 +152,7 @@ nav ul li {
 	font-size: 0.8em;
 	text-align: center;
 	transition: 0.5s;
+	height: 5vh;
   }
   
   #slider-caption.flash {
@@ -253,12 +275,6 @@ a {
 	min-width: var(--min-width);
 }
 
-h2, h3 {
-	padding: 0;
-	margin: 0;
-	color: white;
-	text-align: center;
-}
 
 h6 {
 	text-align: center;
@@ -362,14 +378,14 @@ footer {
 
 #backdrop {
 	position: fixed;
-	top: 10vh;
+	top: 5vh;
 	left: 0;
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0,0,0,0.7);
   
 	display: none;
-	align-items: center;
+	align-items: flex-end;
 	justify-content: center;
   }
   
@@ -379,11 +395,12 @@ footer {
   
   #modal {
 	width: 80vw;
-	height: 65vh;
+	height: 70vh;
 	background: #fff;
 	padding: 1em;
 	border-radius: 5px;
 	box-shadow: 0 0 5px 5px #333;
+	margin-bottom: 10vh;
   }
   
   #modal h4 {
@@ -409,7 +426,11 @@ footer {
   #modal #modal-content {
 	clear: both;
 	padding-top: 1em;
-  }
+	}
+	
+	.projectDescription {
+		display: none;
+	}
 
   @media screen and (max-width: 750px) {
 
@@ -438,6 +459,22 @@ footer {
 	  color: inherit;
 	  background: transparent;
 	}
+
+	h1 {
+		font-size: 2em;
+	}
+
+	nav ul li {
+		font-size: 1em;
+	}
+
+	#banner {
+		background-position: 0 0;
+	}
+
+
+
+
   }
 
  
