--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ nav ul li {
 	list-style: none;
 	font-size: 20px;
 	margin: 0;
+	padding-left: 2em;
 }
 
 #profiles li {
@@ -204,6 +205,8 @@ nav ul li {
 	padding: 1em;
 }
 
+
+
 #overlay {
 	display: flex;
 	flex-direction: column;
@@ -231,11 +234,9 @@ a {
 	grid-template-columns: repeat(2, 1fr);
 	justify-items: center;
 	align-items: start;
+	border-top: solid 1vh #777;
 }
 
-#profiles{
-	padding-left: 2em;
-}
 
 #info, #contact {
 	display: flex;
@@ -251,11 +252,15 @@ a {
 
 #bio, #skills {
 	padding: 0 4em;
+	margin-top: 0;
+	
 }
 
 #skills-heading {
 	font-weight: 700;
 	padding: 0 4em;
+	margin-bottom: 0;
+	margin-top: 0;
 }
 
 .arrow-down {
@@ -432,7 +437,7 @@ footer {
 		flex-direction: column;
 		align-items: center;
 		width: 50%;
-		height: 100%;
+		height: 65vh;
 		min-width: 450px;
 		max-width: 775px;
 	}
@@ -445,8 +450,12 @@ footer {
 		align-items: start;
 	}
 
+	#modal-aboutMe h4 {
+		padding: .25em;
+	}
+
 	#modal-headshot {
-		height: 100%;
+		height: 50px;
 		width: 40%;
 		border: 1px solid black;
 		background-image: url("../images/stanleyheadshot.jpg"); /* The image used */
